--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -20,11 +20,6 @@
     android:orientation="horizontal"
     android:padding="16dp">
 
-    <!--<ImageView-->
-        <!--android:id="@+id/list_item_icon"-->
-        <!--android:layout_width="50dp"-->
-        <!--android:layout_height="50dp" />-->
-
     <LinearLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -33,12 +28,12 @@
         android:paddingLeft="16dp">
 
         <TextView
-            android:id="@+id/version_name"
+            android:id="@+id/miwok_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
         <TextView
-            android:id="@+id/version_number"
+            android:id="@+id/default_text_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
